film-k8s/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: film-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: film-db
  template:
    metadata:
      labels:
        app: film-db
    spec:
      containers:
        - name: mysql
          image: mysql:8
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: film-db-pvc
