film-k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: film-web
spec:
  replicas: 4
  selector:
    matchLabels:
      app: film-web
  template:
    metadata:
      labels:
        app: film-web
    spec:
      containers:
        - name: film-web
          image: kadir57/film-site:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
