film-k8s/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: film-db
spec:
  selector:
    app: film-db
  ports:
    - port: 3306
      targetPort: 3306
