film-k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: film-web-service
spec:
  type: NodePort
  selector:
    app: film-web
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30007
