film-k8s/mysql-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-film-web-to-mysql
spec:
  podSelector:
    matchLabels:
      app: film-db

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: film-web

      ports:
        - protocol: TCP
          port: 3306
